--- a/eshop/eshop/appsettings.json
+++ b/eshop/eshop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db": "Data Source=(localdb)\\Mssqllocaldb;Initial Catalog=AkbankEshopDb;Integrated Security=True"
+  }
 }
