--- a/eshop/eshop.Application/eshop.Application.csproj
+++ b/eshop/eshop.Application/eshop.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\eshop.Infrastructure\eshop.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataTransferObjects\Responses\" />
+  </ItemGroup>
+
 </Project>
